# sp1-contract-call

./: Cargo.toml
crates/client-executor/: Cargo.toml
crates/client-executor/src/: inspector.rs  io.rs  lib.rs
crates/host-executor/src/: lib.rs  sketch.rs
crates/opcode-tracer/: Cargo.toml
crates/opcode-tracer/src/: lib.rs
docs/: GAS_KILLER_SLASHING_SPEC.md  ONCHAIN_VERIFICATION.md  SLASHING_ANALYSIS.md
examples/uniswap/contracts/src/fixtures/: plonk-fixture.json
examples/uniswap/host/src/: basic.rs
