[package]
name = "opcode-tracer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# workspace dependencies
sp1-cc-host-executor.workspace = true
sp1-cc-client-executor.workspace = true

# async runtime
tokio.workspace = true
eyre.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-sol-macro.workspace = true
alloy-rpc-types.workspace = true
alloy-provider.workspace = true

# revm types for OpCode
revm.workspace = true

# reth primitives
reth-primitives.workspace = true

# url parsing
url.workspace = true

# serde for serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# hex encoding for CLI
hex = "0.4"

[[bin]]
name = "trace"
path = "src/bin/trace.rs"
